<resources>
    <string name="app_name">TheCheezery</string>
    <string name="welcome_text">Welcome to the Cheezery!</string>
    <string name="welcome_description">Home of the most wonderful desserts ever seen (and tasted by the human being)</string>
    <string name="name">Name</string>
    <string name="button_start">Get Started</string>

    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="terms">I have read and accept terms and conditions of The Cheezery</string>
    <string name="sign_in">Sign In</string>


    <string name="our_menu">Our Menu</string>
    <string name="cold_drinks">Cold Drinks</string>
    <string name="hot_drinks">Hot Drinks</string>
    <string name="sweets">Sweets</string>
    <string name="saltys">Salties</string>
    <string name="combos">Combos</string>
    <string name="customizable">Custom</string>


</resources>